# dlt-tutorial

./: .gitignore  10_sample_pipeline_transform_with_transformer.py  2_sample_pipeline_sources_resources.py  3_sample_pipeline_postgres_config.py  Dockerfile.dev  Dockerfile.devcontainer  Dockerfile.mkdocs  Makefile  README.md  docker-compose.db.yml  docker-compose.mkdocs.yml  docker-compose.yaml  docker-compose.yml  index.html  mkdocs-requirements.txt  mkdocs.en.yml  mkdocs.es.yml  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.dlt/: config.toml  secrets.toml.example
dlt_tutorial/: 0_sample_pipeline_basic.py  11_sample_pipeline_schema.py  13_sample_pipeline_schema_breaks.py  14_sample_pipeline_debugging_state.py  1_sample_pipeline_basic.py  2_sample_pipeline_sources_resources.py  2b_sample_pipeline_sources_resources_with_config.py  3_sample_pipeline_postgres_config.py  4_sample_pipeline_append.py  4b_sample_pipeline_append_pk.py  5_sample_pipeline_merge_upsert.py  6_sample_pipeline_merge_scd2.py  7_sample_pipeline_schema.py  8_sample_pipeline_schema_with_pydantic.py  ABOUT.md  test.py  test2.py
docs/: 0-introduction.md  2-our-first-pipeline.md  3-sources-and-resources.md  4-incremental-loading.md  4-switching-to-postgres.md  5-incremental-loading.md  5-other-features.md  7-next-steps.md  getting_started.md  index.md  intro.md  part1.md  part2.md
en/: 404.html  index.html  sitemap.xml
es/: 404.html  index.html  sitemap.xml
slides/: EN_slides.html  EN_slides.md  ES_slides.html  ES_slides.md  Makefile  slides.md
(+42 files in other folders)
