[project]
name = "dlt-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
  "dlt[duckdb,postgres,workspace]>=1.15.0",
  "enlighten>=1.14.1",
  "ipykernel>=6.30.1",
  "mypy>=1.17.1",
  "pandas>=2.3.2",
  "pydantic>=2.11.7",
  "sqlalchemy>=2.0.43",
  "streamlit>=1.49.1",
  "tqdm>=4.67.1",
]
