[project]
name = "dlt-tutorial"
version = "0.1.0"
description = "A workshop to get you started with DLT"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
  "dlt[cli,duckdb,postgres,workspace]>=1.15.0",
  "duckdb>=1.3.2",
  "enlighten>=1.14.1",
  "ipykernel>=6.30.1",
  "mypy>=1.17.1",
  "pandas>=2.3.2",
  "pydantic>=2.11.7",
  "sqlalchemy>=2.0.43",
  "streamlit>=1.49.1",
  "tqdm>=4.67.1",
]

[dependency-groups]
mkdocs = [
  "mkdocs>=1.6.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.22",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-snippets>=1.3.2",
  "pymdown-extensions>=10.16.1",
]
